# rust_saas

./: Cargo.toml  README.md
part2/: CLI  Cargo.toml
part2/src/: main.rs
src/: db.rs  main.rs
src/auth/: handlers.rs  jwt.rs  mod.rs
src/models/: ticket.rs  user.rs
src/routes/: mod.rs
src/routes/tickets/: handler.rs  mod.rs
